<resources>
    <string name="app_name">Pets</string>

    <string name="sign_up">You don\'t have a account? Sign Up</string>

    <string name="introSignUp_to_Login_transition_loginButton">Button</string>
    <string name="introSignUp_to_Login_transition_backButton">image</string>
    <string name="login_to_signUp_infoText">infoText</string>
    <string name="login_to_signUp_userName_editText">userName</string>
    <string name="login_to_signUp_password_editText">password</string>

    <string name="emoji">Goodbye!! &#128522;</string>


</resources>
