<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:id="@+id/root">

    <ImageView
        android:id="@+id/splashActivity_appIcon_ImageView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="@dimen/LoginStartMargin"
        android:src="@mipmap/ic_launcher"
        android:layout_centerInParent="true"
        android:transitionName="@string/introSignUp_to_Login_transition_backButton"/>

    <TextView
        android:id="@+id/splashActivity_introText_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/LoginStartMargin"
        android:layout_marginTop="240dp"
        android:lineHeight="34dp"
        android:text="Start\nYour\nAccount"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="26dp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:transitionName="@string/login_to_signUp_infoText"/>

    <LinearLayout
        android:id="@+id/splashActivity_bottomActions_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/LoginStartMargin"
        android:layout_marginRight="@dimen/LoginStartMargin"
        android:layout_marginBottom="132dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:visibility="invisible">

        <Button
            android:id="@+id/splashActivity_loginButton_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:background="@drawable/rounded_button_background_yellow"
            android:elevation="12dp"
            android:text="Log In"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:transitionName="@string/introSignUp_to_Login_transition_loginButton"/>

        <TextView
            android:id="@+id/splashActivity_signUpTextButton_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:gravity="center"/>


    </LinearLayout>

    <TextView
        android:id="@+id/splashActivity_greetingsMessage_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="72dp"
        android:text="Made with love"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"/>

</RelativeLayout>